# TFG

Download/SpslidarServerDownloadPlugin/: CMakeLists.txt  SpslidarServerDownloadPlugin.qrc  info.json
Download/SpslidarServerDownloadPlugin/include/: ActionA.h  CMakeLists.txt  SpslidarServerPlugin.h
Download/SpslidarServerDownloadPlugin/src/: ActionA.cpp  CMakeLists.txt  SpslidarServerPlugin.cpp  spslidardownloaddlg.cpp
Download/SpslidarServerDownloadPlugin/ui/: CMakeLists.txt  spslidardownloaddlg.ui
Doxygen Plugin/: _action_a_8cpp.html  _action_a_8cpp.js  _action_a_8h.html  _action_a_8h.js  _action_a_8h_source.html  _download_8cpp.html  _download_8cpp.js  _download_8h.html  _download_8h.js  _download_8h_source.html  _spslidar_plugin_8cpp.html  _spslidar_plugin_8h.html  _spslidar_plugin_8h.js  _spslidar_plugin_8h_source.html  annotated.html  annotated_dup.js  boundingbox_d_t_o_8cpp.html  boundingbox_d_t_o_8h.html  boundingbox_d_t_o_8h.js  boundingbox_d_t_o_8h_source.html  class_spslidar_plugin-members.html  class_spslidar_plugin.html  class_spslidar_plugin.js  class_upload_dlg-members.html  class_upload_dlg.html  class_upload_dlg.js  classbounding_box_d_t_o-members.html  classbounding_box_d_t_o.html  classbounding_box_d_t_o.js  classcoord-members.html  classcoord.html  classcoord.js  classdataset_d_t_o-members.html  classdataset_d_t_o.html  classdataset_d_t_o.js  classdataset_dlg-members.html  classdataset_dlg.html  classdataset_dlg.js  classes.html  classserver_info-members.html  (+87 more)
SpslidarPlugin/: CMakeLists.txt  Doxyfile  SpslidarPlugin.qrc  info.json
(+96 files in other folders)
