option( PLUGIN_STANDARD_SPSLIDARSERVERDOWNLOADPLUGIN "Install Spslidar Server Download plugin" OFF )

if ( PLUGIN_STANDARD_SPSLIDARSERVERDOWNLOADPLUGIN )
	project( SpslidarServerDownloadPlugin )
	set(CMAKE_AUTOUIC ON)
	AddPlugin( NAME ${PROJECT_NAME} )
	add_subdirectory( include )
	add_subdirectory( src )
	add_subdirectory( ui ) 
	include_directories( ${CloudCompare_SOURCE_DIR} )
endif()
